charts/quack-on-demand/local-stack-k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.5
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources
              name: datasources
              readOnly: true
            - mountPath: /etc/grafana/provisioning/dashboards
              name: dashboards-provider
              readOnly: true
            - mountPath: /var/lib/grafana/dashboards
              name: dashboards-json
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 30
      volumes:
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboards-provider
          configMap:
            name: grafana-dashboards
        - name: dashboards-json
          configMap:
            name: grafana-dashboard-qod
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
