charts/quack-on-demand/local-stack-k8s/seaweedfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs
  template:
    metadata:
      labels:
        app: seaweedfs
    spec:
      containers:
        - name: seaweedfs
          image: chrislusf/seaweedfs:latest
          args:
            - server
            - -dir=/data
            - -s3
            - -s3.port=8333
            - -s3.config=/etc/seaweed/s3.json
            - -master.volumeSizeLimitMB=128
          ports:
            - containerPort: 8333
              name: s3
            - containerPort: 9333
              name: master
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /etc/seaweed
              name: s3-config
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: 8333
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 20
      volumes:
        - name: data
          emptyDir: {}
        - name: s3-config
          configMap:
            name: seaweedfs-s3-config
---
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
spec:
  selector:
    app: seaweedfs
  ports:
    - name: s3
      port: 8333
      targetPort: 8333
    - name: master
      port: 9333
      targetPort: 9333
